--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -133,9 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': {'B': 2, 'E': 2, 'W': 1}, 'B': {'D': 5, 'W': 4, 'C': 2, 'F': 3}, 'C': {'F': 7, 'V': 9}, 'D': {'E': 1, 'J': 7}, 'E': {'K': 3}, 'F': {'L': 2, 'M': 7, 'R': 3, 'Y': 1}, 'G': {'K': 8, 'J': 5, 'H': 2}, 'H': {'I': 4, 'P': 1}, 'I': {'K': 5}, 'J': {'O': 3, 'L': 2}, 'L': {'N': 4}, 'M': {'N': 5, 'Z': 3, 'X': 1}, 'N': {'O': 1}, 'O': {'P': 1}, 'R': {'S': 4}, 'S': {'V': 2}, 'X': {'Z': 2}, 'Y': {'X': 5}, 'Z': {'N': 6}}\n"
+     ]
+    },
     {
      "ename": "KeyError",
      "evalue": "'W'",
@@ -143,8 +150,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 78\u001b[0m\n\u001b[0;32m     76\u001b[0m graph \u001b[39m=\u001b[39m ast\u001b[39m.\u001b[39mliteral_eval(data_str)\n\u001b[0;32m     77\u001b[0m \u001b[39m# Find the shortest paths from the start vertex 'A' to all other vertices\u001b[39;00m\n\u001b[1;32m---> 78\u001b[0m distances, previous_vertices \u001b[39m=\u001b[39m dijkstra(graph, \u001b[39m'\u001b[39;49m\u001b[39mA\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     80\u001b[0m \u001b[39m# Print the distances\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[39mprint\u001b[39m(distances)\n",
-      "Cell \u001b[1;32mIn[6], line 29\u001b[0m, in \u001b[0;36mdijkstra\u001b[1;34m(graph, start)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[39mfor\u001b[39;00m neighbor, weight \u001b[39min\u001b[39;00m graph[vertex]\u001b[39m.\u001b[39mitems():\n\u001b[0;32m     28\u001b[0m     distance \u001b[39m=\u001b[39m distances[vertex] \u001b[39m+\u001b[39m weight\n\u001b[1;32m---> 29\u001b[0m     \u001b[39mif\u001b[39;00m distance \u001b[39m<\u001b[39m distances[neighbor]:\n\u001b[0;32m     30\u001b[0m         \u001b[39m# Update the distance of the neighbor\u001b[39;00m\n\u001b[0;32m     31\u001b[0m         distances[neighbor] \u001b[39m=\u001b[39m distance\n\u001b[0;32m     32\u001b[0m         \u001b[39m# Add the neighbor to the queue\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[11], line 79\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[39mprint\u001b[39m(graph)\n\u001b[0;32m     78\u001b[0m \u001b[39m# Find the shortest paths from the start vertex 'A' to all other vertices\u001b[39;00m\n\u001b[1;32m---> 79\u001b[0m distances, previous_vertices \u001b[39m=\u001b[39m dijkstra(graph, \u001b[39m'\u001b[39;49m\u001b[39mA\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     81\u001b[0m \u001b[39m# Print the distances\u001b[39;00m\n\u001b[0;32m     82\u001b[0m \u001b[39mprint\u001b[39m(distances)\n",
+      "Cell \u001b[1;32mIn[11], line 29\u001b[0m, in \u001b[0;36mdijkstra\u001b[1;34m(graph, start)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[39mfor\u001b[39;00m neighbor, weight \u001b[39min\u001b[39;00m graph[vertex]\u001b[39m.\u001b[39mitems():\n\u001b[0;32m     28\u001b[0m     distance \u001b[39m=\u001b[39m distances[vertex] \u001b[39m+\u001b[39m weight\n\u001b[1;32m---> 29\u001b[0m     \u001b[39mif\u001b[39;00m distance \u001b[39m<\u001b[39m distances[neighbor]:\n\u001b[0;32m     30\u001b[0m         \u001b[39m# Update the distance of the neighbor\u001b[39;00m\n\u001b[0;32m     31\u001b[0m         distances[neighbor] \u001b[39m=\u001b[39m distance\n\u001b[0;32m     32\u001b[0m         \u001b[39m# Add the neighbor to the queue\u001b[39;00m\n",
       "\u001b[1;31mKeyError\u001b[0m: 'W'"
      ]
     }
@@ -173,7 +180,7 @@
     "        \n",
     "        # If the distance is greater than the current distance, skip it\n",
     "        if distance > distances[vertex]:\n",
-    "            continue\n",
+    "            continue                            # If the if statement is true then the 'continue' keyword simply returns to the start of the loop\n",
     "        \n",
     "        # Update the distances of the neighbors\n",
     "        for neighbor, weight in graph[vertex].items():\n",
@@ -226,6 +233,7 @@
     "data_str = repr(data)\n",
     "\n",
     "graph = ast.literal_eval(data_str)\n",
+    "print(graph)\n",
     "# Find the shortest paths from the start vertex 'A' to all other vertices\n",
     "distances, previous_vertices = dijkstra(graph, 'A')\n",
     "\n",
