I think that adjacency matrix is finished

--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -20,20 +20,19 @@
     "    # Initialize the matrix\n",
     "    adjacency_matrix = [[0 for _ in range(length)] for _ in range(length)]\n",
     "\n",
-    "    for i, line in enumerate(adjacency_matrix\n"
+    "    for i, line in enumerate(adjacency_matrix)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'R', 'S', 'V', 'W', 'X', 'Y', 'Z']\n",
-      "23\n"
+      "[[None, 2, None, None, 2, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1, None, None, None], [2, None, 2, 5, None, 3, None, None, None, None, None, None, None, None, None, None, None, None, None, 4, None, None, None], [None, 2, None, None, None, 7, None, None, None, None, None, None, None, None, None, None, None, None, 9, None, None, None, None], [None, 5, None, None, 1, None, None, None, None, 7, None, None, None, None, None, None, None, None, None, None, None, None, None], [2, None, None, 1, None, None, None, None, None, None, 3, None, None, None, None, None, None, None, None, None, None, None, None], [None, 3, 7, None, None, None, None, None, None, None, None, 2, 7, None, None, None, 3, None, None, None, None, 1, None], [None, None, None, None, None, None, None, 2, None, 5, 8, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, None, 2, None, 4, None, None, None, None, None, None, 1, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, 4, None, None, 5, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, 7, None, None, 5, None, None, None, None, 2, None, None, 3, None, None, None, None, None, None, None, None], [None, None, None, None, 3, None, 8, None, 5, None, None, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, 2, None, None, None, 2, None, None, None, 4, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, 7, None, None, None, None, None, None, None, 5, None, None, None, None, None, None, 1, None, 3], [None, None, None, None, None, None, None, None, None, None, None, 4, 5, None, 1, None, None, None, None, None, None, None, 6], [None, None, None, None, None, None, None, None, None, 3, None, None, None, 1, None, 1, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, 1, None, None, None, None, None, None, 1, None, None, None, None, None, None, None, None], [None, None, None, None, None, 3, None, None, None, None, None, None, None, None, None, None, None, 4, None, None, None, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 4, None, 2, None, None, None, None], [None, None, 9, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 2, None, None, None, None, None], [1, 4, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, 1, None, None, None, None, None, None, None, None, 5, 2], [None, None, None, None, None, 1, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 5, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, 3, 6, None, None, None, None, None, None, 2, None, None]]\n"
      ]
     }
    ],
@@ -54,8 +53,18 @@
     "\n",
     "city_names = sorted(city_names)\n",
     "\n",
-    "print(city_names)\n",
-    "print(len(city_names))"
+    "city_indices = {city: i for i, city in enumerate(city_names)}\n",
+    "\n",
+    "adj_mat = [[None] * len(city_names) for _ in range(len(city_names))]\n",
+    "\n",
+    "for row in file:\n",
+    "    city1, city2, dist = row\n",
+    "    i = city_indices[city1]\n",
+    "    j = city_indices[city2]\n",
+    "    adj_mat[i][j] = dist\n",
+    "    adj_mat[j][i] = dist\n",
+    "\n",
+    "print(adj_mat)"
    ]
   }
  ],
