--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -1,26 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 142,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3402896729.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[142], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i, line in enumerate(adjacency_matrix\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
    "source": [
-    "def make_matrix(length):\n",
-    "    \n",
-    "    # Initialize the matrix\n",
-    "    adjacency_matrix = [[0 for _ in range(length)] for _ in range(length)]\n",
-    "\n",
-    "    for i, line in enumerate(adjacency_matrix)\n"
+    "Reading the file and creating an adjacency matrix"
    ]
   },
   {
