Compiles but need some modifications, print route for exampel

--- a/Dijkstra.ipynb
+++ b/Dijkstra.ipynb
@@ -1,6 +1,77 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Library for INT_MAX\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "class Graph():\n",
+    "\n",
+    "\tdef __init__(self, vertices):\n",
+    "\t\tself.V = vertices\n",
+    "\t\tself.graph = [[0 for column in range(vertices)]\n",
+    "\t\t\t\t\tfor row in range(vertices)]\n",
+    "\n",
+    "\tdef printSolution(self, dist):\n",
+    "\t\tprint(\"Vertex \\tDistance from Source\")\n",
+    "\t\tfor node in range(self.V):\n",
+    "\t\t\tprint(node, \"\\t\", dist[node])\n",
+    "\n",
+    "\t# A utility function to find the vertex with\n",
+    "\t# minimum distance value, from the set of vertices\n",
+    "\t# not yet included in shortest path tree\n",
+    "\tdef minDistance(self, dist, sptSet):\n",
+    "\n",
+    "\t\t# Initialize minimum distance for next node\n",
+    "\t\tmin = sys.maxsize\n",
+    "\n",
+    "\t\t# Search not nearest vertex not in the\n",
+    "\t\t# shortest path tree\n",
+    "\t\tfor u in range(self.V):\n",
+    "\t\t\tif dist[u] < min and sptSet[u] == False:\n",
+    "\t\t\t\tmin = dist[u]\n",
+    "\t\t\t\tmin_index = u\n",
+    "\n",
+    "\t\treturn min_index\n",
+    "\n",
+    "\t# Function that implements Dijkstra's single source\n",
+    "\t# shortest path algorithm for a graph represented\n",
+    "\t# using adjacency matrix representation\n",
+    "\tdef dijkstra(self, src):\n",
+    "\n",
+    "\t\tdist = [sys.maxsize] * self.V\n",
+    "\t\tdist[src] = 0\n",
+    "\t\tsptSet = [False] * self.V\n",
+    "\n",
+    "\t\tfor cout in range(self.V):\n",
+    "\n",
+    "\t\t\t# Pick the minimum distance vertex from\n",
+    "\t\t\t# the set of vertices not yet processed.\n",
+    "\t\t\t# x is always equal to src in first iteration\n",
+    "\t\t\tx = self.minDistance(dist, sptSet)\n",
+    "\n",
+    "\t\t\t# Put the minimum distance vertex in the\n",
+    "\t\t\t# shortest path tree\n",
+    "\t\t\tsptSet[x] = True\n",
+    "\n",
+    "\t\t\t# Update dist value of the adjacent vertices\n",
+    "\t\t\t# of the picked vertex only if the current\n",
+    "\t\t\t# distance is greater than new distance and\n",
+    "\t\t\t# the vertex in not in the shortest path tree\n",
+    "\t\t\tfor y in range(self.V):\n",
+    "\t\t\t\tif self.graph[x][y] > 0 and sptSet[y] == False and \\\n",
+    "\t\t\t\t\t\tdist[y] > dist[x] + self.graph[x][y]:\n",
+    "\t\t\t\t\tdist[y] = dist[x] + self.graph[x][y]\n",
+    "\n",
+    "\t\tself.printSolution(dist)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -10,48 +81,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[None, None, None, None, 2, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1, None, None, None], [None, None, 2, 5, None, 3, None, None, None, None, None, None, None, None, None, None, None, None, None, 4, None, None, None], [None, 2, None, None, None, 7, None, None, None, None, None, None, None, None, None, None, None, None, 9, None, None, None, None], [None, 5, None, None, 1, None, None, None, None, 7, None, None, None, None, None, None, None, None, None, None, None, None, None], [2, None, None, 1, None, None, None, None, None, None, 3, None, None, None, None, None, None, None, None, None, None, None, None], [None, 3, 7, None, None, None, None, None, None, None, None, 2, 7, None, None, None, 3, None, None, None, None, 1, None], [None, None, None, None, None, None, None, 2, None, 5, 8, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, None, 2, None, 4, None, None, None, None, None, None, 1, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, 4, None, None, 5, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, 7, None, None, 5, None, None, None, None, 2, None, None, 3, None, None, None, None, None, None, None, None], [None, None, None, None, 3, None, 8, None, 5, None, None, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, 2, None, None, None, 2, None, None, None, 4, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, 7, None, None, None, None, None, None, None, 5, None, None, None, None, None, None, 1, None, 3], [None, None, None, None, None, None, None, None, None, None, None, 4, 5, None, 1, None, None, None, None, None, None, None, 6], [None, None, None, None, None, None, None, None, None, 3, None, None, None, 1, None, 1, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, 1, None, None, None, None, None, None, 1, None, None, None, None, None, None, None, None], [None, None, None, None, None, 3, None, None, None, None, None, None, None, None, None, None, None, 4, None, None, None, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 4, None, 2, None, None, None, None], [None, None, 9, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 2, None, None, None, None, None], [1, 4, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, 1, None, None, None, None, None, None, None, None, 5, 2], [None, None, None, None, None, 1, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 5, None, None], [None, None, None, None, None, None, None, None, None, None, None, None, 3, 6, None, None, None, None, None, None, 2, None, None]]\n"
+      "Vertex \tDistance from Source\n",
+      "0 \t 0\n",
+      "1 \t 5\n",
+      "2 \t 7\n",
+      "3 \t 3\n",
+      "4 \t 2\n",
+      "5 \t 8\n",
+      "6 \t 13\n",
+      "7 \t 14\n",
+      "8 \t 10\n",
+      "9 \t 10\n",
+      "10 \t 5\n",
+      "11 \t 10\n",
+      "12 \t 15\n",
+      "13 \t 14\n",
+      "14 \t 13\n",
+      "15 \t 14\n",
+      "16 \t 11\n",
+      "17 \t 15\n",
+      "18 \t 16\n",
+      "19 \t 1\n",
+      "20 \t 14\n",
+      "21 \t 9\n",
+      "22 \t 16\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "col_names = ['From City','To City','Distance']\n",
-    "file = pd.read_csv(\"city 1.txt\", delimiter=r'\\s+') #Reading the datafile and specifying the delimiter\n",
+    "if __name__ == \"__main__\":\n",
     "\n",
-    "file = file.to_numpy()  #change the datatype from pandas.dataframe to a numpy array\n",
-    "city_names = []         #Create an empty list for the city names\n",
+    "    col_names = ['From City','To City','Distance']\n",
+    "    file = pd.read_csv(\"city 1.txt\", delimiter=r'\\s+') #Reading the datafile and specifying the delimiter\n",
     "\n",
-    "#Append the city names to the list, NOTE the not in argument\n",
-    "for i in range(0, len(file)):\n",
-    "    if file[i][0] not in city_names:\n",
-    "        city_names.append(file[i][0])\n",
-    "    if file[i][1] not in city_names:\n",
-    "        city_names.append(file[i][1])\n",
+    "    file = file.to_numpy()  #change the datatype from pandas.dataframe to a numpy array\n",
+    "    city_names = []         #Create an empty list for the city names\n",
     "\n",
-    "city_names = sorted(city_names) #Sort the city names list\n",
+    "    #Append the city names to the list, NOTE the not in argument\n",
+    "    for i in range(0, len(file)):\n",
+    "        if file[i][0] not in city_names:\n",
+    "            city_names.append(file[i][0])\n",
+    "        if file[i][1] not in city_names:\n",
+    "            city_names.append(file[i][1])\n",
     "\n",
-    "city_indices = {city: i for i, city in enumerate(city_names)} #Give every city name am index for future use\n",
+    "    city_names = sorted(city_names) #Sort the city names list\n",
     "\n",
-    "adj_mat = [[None] * len(city_names) for _ in range(len(city_names))] #Creates an empty matrix of the correct size and sets all the values to None\n",
+    "    city_indices = {city: i for i, city in enumerate(city_names)} #Give every city name am index for future use\n",
     "\n",
-    "# Where there is a connection change from None to the given distance\n",
-    "for row in file:\n",
-    "    city1, city2, dist = row\n",
-    "    i = city_indices[city1]\n",
-    "    j = city_indices[city2]\n",
-    "    adj_mat[i][j] = dist\n",
-    "    adj_mat[j][i] = dist\n",
+    "    adj_mat = [[0] * len(city_names) for _ in range(len(city_names))] #Creates an empty matrix of the correct size and sets all the values to None\n",
     "\n",
-    "print(adj_mat)"
+    "    # Where there is a connection change from None to the given distance\n",
+    "    for row in file:\n",
+    "        city1, city2, dist = row\n",
+    "        i = city_indices[city1]\n",
+    "        j = city_indices[city2]\n",
+    "        adj_mat[i][j] = dist\n",
+    "        adj_mat[j][i] = dist\n",
+    "\n",
+    "    g = Graph(len(city_names))\n",
+    "    g.graph = adj_mat\n",
+    "\n",
+    "    g.dijkstra(0)"
    ]
   }
  ],
